Present delete view

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,3 +1,6 @@
 LibraryView.title="Library";
-NameView.title="Name";
 LibraryPresenter.empty="You haven't created any board yet.\nUse the button on the top right corner to begin.";
+NameView.title="Name";
+DeletePresenter.message="Delete this board?\n";
+DeleteView.cancel="Cancel";
+DeleteView.delete="Delete";
