--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 LibraryView.title="Library";
 LibraryPresenter.empty="You haven't created any board yet.\nUse the button on the top right corner to begin.";
-NameView.title="Name";
+NameChange.title="Edit name";
+NameCreateColumn.title="New column";
 DeletePresenter.message="Delete this board?\n";
 DeleteView.cancel="Cancel";
 DeleteView.delete="Delete";
