--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,7 +1,8 @@
 LibraryView.title="Library";
 LibraryPresenter.empty="You haven't created any board yet.\nUse the button on the top right corner to begin.";
-NameChange.title="Edit name";
-NameCreateColumn.title="New column";
+BoardInteractor.editTitle="Edit name";
+TextCreateColumn.title="New column";
+TextCreateCard.title="New card";
 DeletePresenter.message="Delete this board?\n";
 DeleteView.cancel="Cancel";
 DeleteView.delete="Delete";
