--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -13,3 +13,4 @@ DeleteView.delete="Delete";
 ShareView.label="Share board";
 ShareView.done="Done";
 ShareView.send="Send";
+ScanView.name="Scan QR Code";
