--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -14,3 +14,5 @@ ShareView.label="Share board";
 ShareView.done="Done";
 ShareView.send="Send";
 ScanView.name="Scan QR Code";
+ScanPresenter.error="Unable to read QR Code";
+ScanPresenter.success="Board loaded successfully";
