--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -13,7 +13,8 @@ DeleteView.delete="Delete";
 ShareView.label="Share board";
 ShareView.done="Done";
 ShareView.send="Send";
-ScanView.name="Scan QR Code";
+ScanView.title="Scan QR Code";
+ScanView.library="Image";
 ScanPresenter.error="Unable to read QR Code";
 ScanPresenter.success="Board loaded successfully";
 ScanPresenter.duplicate="Board already on your library";
