Add progress bar

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -6,6 +6,7 @@ LibraryInteractor.column.progress="In progress";
 LibraryInteractor.column.done="Done";
 BoardInteractor.boardTitle="Edit board";
 BoardInteractor.columnTitle="Edit column";
+BoardView.progressTitle="Progress";
 TextCreateColumn.title="New column";
 TextCreateCard.title="New card";
 EditView.delete="Delete";
