Present info with md

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -22,3 +22,4 @@ ScanView.library="Image";
 ScanPresenter.error="Unable to read QR Code";
 ScanPresenter.success="Board loaded successfully";
 ScanPresenter.duplicate="Board already on your library";
+InfoView.dismiss="Dismiss";
