--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -24,3 +24,5 @@ ScanPresenter.success="Board loaded successfully";
 ScanPresenter.duplicate="Board already on your library";
 InfoView.dismiss="Dismiss";
 SettingsView.title="Settings";
+SettingsView.labelColumns="### Default columns\nAdd the columns\n_To do_, _In progress_ and _Done_\nto new boards";
+SettingsView.labelFont="### Font size\nCards font size";
