Replace scanner with QRhero

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,9 +1,14 @@
 LibraryView.title="Boards";
-LibraryPresenter.empty="Empty library.\nUse the options on the top to create a new board or load one from a QR Code.";
+LibraryPresenter.empty="Create a new board or load one from a QR Code.";
 LibraryInteractor.board="Catban board";
 LibraryInteractor.column.todo="To do";
 LibraryInteractor.column.progress="In progress";
 LibraryInteractor.column.done="Done";
+LibraryInteractor.qrView="QR Codes";
+LibraryInteractor.scanError="Error: Failed to scan QR Code";
+LibraryInteractor.boardAdded="Board added to your library";
+LibraryInteractor.boardDuplicated="Board already in your library";
+LibraryInteractor.invalidQRCode="Invalid QR Code";
 BoardInteractor.boardTitle="Edit board";
 BoardInteractor.columnTitle="Edit column";
 TextCreateColumn.title="New column";
@@ -17,11 +22,6 @@ DeleteView.delete="Delete";
 ShareView.label="Share board";
 ShareView.done="Done";
 ShareView.send="Send";
-ScanView.title="Scan QR Code";
-ScanView.library="Image";
-ScanPresenter.error="Unable to read QR Code";
-ScanPresenter.success="Board loaded successfully";
-ScanPresenter.duplicate="Board already on your library";
 InfoView.dismiss="Dismiss";
 SettingsView.title="Settings";
 SettingsView.labelColumns="### Default columns\nAdd the columns\n_To do_, _In progress_ and _Done_\nto new boards";
