Refactor text strategy

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -10,9 +10,9 @@ LibraryInteractor.boardAdded="Board added to your library";
 LibraryInteractor.boardDuplicated="Board already in your library";
 LibraryInteractor.invalidQRCode="Invalid QR Code";
 BoardInteractor.boardTitle="Edit board";
+BoardInteractor.newColumn="New column";
 BoardInteractor.columnTitle="Edit column";
-TextCreateColumn.title="New column";
-TextCreateCard.title="New card";
+BoardInteractor.newCard="New card";
 EditView.delete="Delete";
 DeleteBoard.title="Delete board?";
 DeleteColumn.title="Delete column?";
