--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -13,10 +13,10 @@ BoardInteractor.boardTitle="Edit board";
 BoardInteractor.newColumn="New column";
 BoardInteractor.columnTitle="Edit column";
 BoardInteractor.newCard="New card";
+BoardInteractor.deleteCard="Delete card?";
+BoardInteractor.deleteColumn="Delete column?";
+BoardInteractor.deleteBoard="Delete board?";
 EditView.delete="Delete";
-DeleteBoard.title="Delete board?";
-DeleteColumn.title="Delete column?";
-DeleteCard.title="Delete card?";
 DeleteView.cancel="Cancel";
 DeleteView.delete="Delete";
 ShareView.label="Share board";
