--- a/Resources/en.lproj/InfoPlist.strings
+++ b/Resources/en.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
-NSPhotoLibraryUsageDescription="Load QR Codes from your Photo Library.";
-NSPhotoLibraryAddUsageDescription="Store QR Codes in your Photo Library";
-NSCameraUsageDescription="Scan QR Codes";
+NSPhotoLibraryUsageDescription="You can load projects shared with you by scanning Catban QR Codes from your Photo Library.";
+NSPhotoLibraryAddUsageDescription="You can save Catban QR Codes to your Photo Library. These QR Codes help you share your projects.";
+NSCameraUsageDescription="You can load projects shared with you by scanning Catban QR Codes with your Camera.";
