Add preview action items

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -9,13 +9,15 @@ LibraryInteractor.scanError="Error: Failed to scan QR Code";
 LibraryInteractor.boardAdded="Board added to your library";
 LibraryInteractor.boardDuplicated="Board already in your library";
 LibraryInteractor.invalidQRCode="Invalid QR Code";
+BoardView.share="Share";
+BoardView.delete="Delete";
 BoardInteractor.boardTitle="Edit board";
 BoardInteractor.newColumn="New column";
 BoardInteractor.columnTitle="Edit column";
 BoardInteractor.newCard="New card";
 BoardInteractor.deleteCard="Delete card?";
 BoardInteractor.deleteColumn="Delete column?";
-BoardInteractor.deleteBoard="Delete board?";
+BoardInteractor.deleteBoard="Delete %@?";
 EditView.delete="Delete";
 DeleteView.cancel="Cancel";
 DeleteView.delete="Delete";
