--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@ SettingsView.labelAbout="Catban\n%@";
 SettingsView.contact="Contact";
 SettingsView.share="Share";
 SettingsView.review="Review";
-SettingsView.sendEmailSubject="Contact us";
+SettingsView.sendEmailSubject="Contact";
 SettingsView.sendEmailBody="Dear Catban,\n";
 SettingsView.labelColumns="**Default columns**\nAdd columns\n_To do_, _In progress_ and _Done_\nto new boards";
 SettingsView.labelFont="**Font size**\nSize of text used in cards";
