Add possibility to manually load boards from iCloud
it is not safe to trust iCloud to be synchronised on first launch of
the app, hence we need to provide a way for the users to
acknowledge the library was not loaded and another attempt
can be made.

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,4 +1,5 @@
 LibraryView.title="Boards";
+LibraryView.load="Load";
 LibraryPresenter.qrView="QR Codes";
 LibraryPresenter.empty="## Library empty\n\n_Next steps_\n- Create a new board\n- Scan a QR code with a Board shared\n\n\nIf you have Boards in another device but they are not showing here you can try to load them again.";
 LibraryPresenter.boardDuplicated="Board already in your library";
