--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -26,7 +26,7 @@ ShareView.done="Done";
 ShareView.send="Send";
 InfoView.dismiss="Dismiss";
 SettingsView.title="Settings";
-SettingsView.labelAbout="Catban\n%@";
+SettingsView.labelName="Catban";
 SettingsView.contact="Contact";
 SettingsView.share="Share";
 SettingsView.review="Review";
