Update skin after changes in segmented

--- a/Resources/application/en.lproj/Localizable.strings
+++ b/Resources/application/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@ SettingsView.share="Share";
 SettingsView.review="Review";
 SettingsView.sendEmailSubject="Contact";
 SettingsView.sendEmailBody="Dear Catban,\n";
-SettingsView.labelColumns="**Default columns**\nAdd columns\n_To do_, _In progress_ and _Done_\nto new boards";
-SettingsView.labelFont="**Font size**\nSize of text used in cards";
+SettingsView.labelSkin="## Interface\nHow do you want your Catban?";
+SettingsView.labelColumns="## Default columns\nAdd columns\n_To do_, _In progress_ and _Done_\nto new boards";
+SettingsView.labelFont="## Font size\nSize of text used in cards";
 SettingsView.sendEmailFailed="You haven't configured an email account on your device";
